--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <link rel="icon" href="./assets/22FavIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/7cda4fd3a8.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.SVG" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>22nd Century Capital</title>
